# low-latency-trade-execution

./: .gitignore  BUILD.md  CMakeLists.txt  Code Review.md  LICENSE  Performance Report.md  README.md
src/: client_main.cpp
src/api/: deribit.h  trade_handler.h
src/client/: client_trader.cpp  client_trader.h
src/websocket/: websocket.cpp  websocket.h
